test/spec_vectors/i64/fail/module_18.wat
(module (func (result i64) (i64.ctz (i32.const 0))))